# devdocs

./: CMakeLists.txt  README.md  devgrep.in  devmanage.in  devopen.in  info.py  update.conf  update.py
.github/workflows/: build-debian.yml
debian/: changelog  control  control.in  copyright  devdocs-data-angular.install  devdocs-data-angularjs-1.8.install  devdocs-data-angularjs.install  devdocs-data-ansible.install  devdocs-data-apache-http-server.install  devdocs-data-apache-pig-0.17.install  devdocs-data-apache-pig.install  devdocs-data-astro.install  devdocs-data-async.install  devdocs-data-axios.install  devdocs-data-babel-7.install  devdocs-data-babel.install  devdocs-data-backbone.install  devdocs-data-bash.install  devdocs-data-bazel-7.0.install  devdocs-data-bazel.install  devdocs-data-bluebird.install  devdocs-data-bootstrap-5.install  devdocs-data-bootstrap.install  devdocs-data-bottle-0.12.install  devdocs-data-bottle.install  devdocs-data-bower.install  devdocs-data-browser-support-tables.install  devdocs-data-c++.install  devdocs-data-c.install  devdocs-data-cakephp-4.4.install  devdocs-data-cakephp.install  devdocs-data-chai.install  devdocs-data-chef-18.install  devdocs-data-chef.install  devdocs-data-click.install  devdocs-data-clojure-1.11.install  devdocs-data-clojure.install  devdocs-data-cmake-3.26.install  devdocs-data-cmake.install  devdocs-data-cobol.install  (+287 more)
elinks/: elinks.conf  hooks.py
html/angular/: cli.html  errors.html  extended-diagnostics.html  index.html  index.json  mtime  start.html
html/angularjs/: guide.html  index.html  slug
html/angularjs~1.8/: index.json  mtime
html/ansible/: index.html  index.json  mtime
html/apache-http-server/: bind.html  caching.html  configuring.html  dns-caveats.html  dso.html  expr.html  getting-started.html  index.json  install.html  invoking.html  logs.html  mpm.html  sections.html  socache.html  stopping.html  urlmapping.html
html/apache-pig/: cmds.html  func.html  start.html
html/apache_http_server/: content-negotiation.html  custom-error.html  env.html  filter.html  handler.html  index.html  mtime  server-wide.html  slug  suexec.html
html/apache_pig/: basic.html  mtime  slug
html/apache_pig~0.17/: admin.html  cont.html  index.html  index.json  perf.html  test.html  udf.html
html/astro/: index.html  index.json  mtime
html/async/: index.html  index.json  mtime
html/axios/: api_intro.html  cancellation.html  config_defaults.html  example.html  handling_errors.html  index.html  index.json  instance.html  interceptors.html  intro.html  mtime  multipart.html  notes.html  post_example.html  req_config.html  res_schema.html  translating.html  urlencoded.html
html/babel/: mtime  slug
html/backbone/: mtime  (+2 more)
(+180429 files in other folders)
